# saltax

./: .dockerignore  .env.example  .gitignore  .semgrepignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  saltax.config.yaml
contracts/: .gas-snapshot  foundry.toml
contracts/contracts/: SaltaXStaking.sol  SaltaXTreasury.sol
contracts/script/: Deploy.s.sol
contracts/test/: Staking.t.sol  Treasury.t.sol
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/e2e/: critical-path.spec.ts  wallet-flow.spec.ts
github-proxy/: package.json
github-proxy/src/: identity-bridge.ts  index.ts
scripts/: deploy.sh  kms-init.sh
src/: config.py  main.py  security.py
src/api/: __init__.py  app.py  deps.py  handlers.py  models.py
src/attestation/: __init__.py  engine.py  store.py  verifier.py
src/backfill/: engine.py
src/cli/: backfill.py
src/disputes/: __init__.py  eigen_verify.py  molt_court.py  router.py  scheduler.py
src/feedback/: confidence.py  reaction_handler.py
src/github/: __init__.py  checks.py  client.py  comments.py  exceptions.py  merge.py  summary.py
src/identity/: __init__.py  bridge_client.py  registration.py  reputation.py
src/indexing/: graph.py  metrics.py  models.py  scheduler.py
src/intelligence/: __init__.py  database.py  pattern_extractor.py  schema.sql  sealing.py  similarity.py  vector_index.py
src/models/: __init__.py  attestation.py  audit.py  enums.py  github.py  identity.py  patrol.py  pipeline.py  staking.py  treasury.py
src/observability/: __init__.py  health.py  logging.py  metrics.py
tests/: conftest.py
(+208 files in other folders)
